@@ -1,24 +1,10 @@
 {
-  "timestamp" : "2022-05-15T08:16:45Z",
-  "count_outdated" : 28,
-  "uniques_outdated" : 18,
+  "timestamp" : "2022-05-18T00:56:50Z",
+  "count_outdated" : 44,
+  "uniques_outdated" : 29,
   "count" : 97,
   "uniques" : 62,
   "clones" : [
-    {
-      "timestamp": "2022-05-03T00:00:00Z",
-      "count": 5,
-      "count_minmax": [ 5, 5 ],
-      "uniques": 3,
-      "uniques_minmax": [ 3, 3 ]
-    },
-    {
-      "timestamp": "2022-05-04T00:00:00Z",
-      "count": 11,
-      "count_minmax": [ 0, 11 ],
-      "uniques": 8,
-      "uniques_minmax": [ 0, 8 ]
-    },
     {
       "timestamp": "2022-05-05T00:00:00Z",
       "count": 8,
@@ -29,9 +15,9 @@
     {
       "timestamp": "2022-05-06T00:00:00Z",
       "count": 7,
-      "count_minmax": [ 0, 7 ],
+      "count_minmax": [ 7, 7 ],
       "uniques": 6,
-      "uniques_minmax": [ 0, 6 ]
+      "uniques_minmax": [ 6, 6 ]
     },
     {
       "timestamp": "2022-05-08T00:00:00Z",
@@ -43,9 +29,9 @@
     {
       "timestamp": "2022-05-09T00:00:00Z",
       "count": 5,
-      "count_minmax": [ 0, 5 ],
+      "count_minmax": [ 5, 5 ],
       "uniques": 4,
-      "uniques_minmax": [ 0, 4 ]
+      "uniques_minmax": [ 4, 4 ]
     },
     {
       "timestamp": "2022-05-11T00:00:00Z",
@@ -57,9 +43,9 @@
     {
       "timestamp": "2022-05-12T00:00:00Z",
       "count": 7,
-      "count_minmax": [ 0, 7 ],
+      "count_minmax": [ 7, 7 ],
       "uniques": 6,
-      "uniques_minmax": [ 0, 6 ]
+      "uniques_minmax": [ 6, 6 ]
     },
     {
       "timestamp": "2022-05-14T00:00:00Z",
