@@ -1,17 +1,7 @@
 {
-  "count": 69,
-  "uniques": 20,
+  "count": 53,
+  "uniques": 17,
   "clones": [
-    {
-      "timestamp": "2022-05-03T00:00:00Z",
-      "count": 5,
-      "uniques": 3
-    },
-    {
-      "timestamp": "2022-05-04T00:00:00Z",
-      "count": 11,
-      "uniques": 8
-    },
     {
       "timestamp": "2022-05-05T00:00:00Z",
       "count": 8,
